--- a/langchain/chroma_db.ipynb
+++ b/langchain/chroma_db.ipynb
@@ -109,6 +109,110 @@
    "execution_count": null,
    "id": "f86cf7a5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "tables 3.8.0 requires blosc2~=2.0.0, which is not installed.\n",
+      "tables 3.8.0 requires cython>=0.29.21, which is not installed.\n",
+      "python-lsp-black 1.2.1 requires black>=22.3.0, but you have black 0.0 which is incompatible.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting langchain\n",
+      "  Downloading langchain-0.3.27-py3-none-any.whl (1.0 MB)\n",
+      "                                              0.0/1.0 MB ? eta -:--:--\n",
+      "     -                                        0.0/1.0 MB 640.0 kB/s eta 0:00:02\n",
+      "     ----                                     0.1/1.0 MB 1.3 MB/s eta 0:00:01\n",
+      "     -----------                              0.3/1.0 MB 2.0 MB/s eta 0:00:01\n",
+      "     -------------------                      0.5/1.0 MB 2.6 MB/s eta 0:00:01\n",
+      "     -----------------------------            0.7/1.0 MB 3.1 MB/s eta 0:00:01\n",
+      "     --------------------------------------   1.0/1.0 MB 3.4 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 1.0/1.0 MB 3.2 MB/s eta 0:00:00\n",
+      "Collecting langchain-core<1.0.0,>=0.3.72 (from langchain)\n",
+      "  Downloading langchain_core-0.3.76-py3-none-any.whl (447 kB)\n",
+      "                                              0.0/447.5 kB ? eta -:--:--\n",
+      "     -------------                          163.8/447.5 kB 9.6 MB/s eta 0:00:01\n",
+      "     -------------------------------        368.6/447.5 kB 5.8 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 447.5/447.5 kB 5.6 MB/s eta 0:00:00\n",
+      "Collecting langchain-text-splitters<1.0.0,>=0.3.9 (from langchain)\n",
+      "  Downloading langchain_text_splitters-0.3.11-py3-none-any.whl (33 kB)\n",
+      "Collecting langsmith>=0.1.17 (from langchain)\n",
+      "  Downloading langsmith-0.4.29-py3-none-any.whl (386 kB)\n",
+      "                                              0.0/386.2 kB ? eta -:--:--\n",
+      "     --------------------                   204.8/386.2 kB 6.3 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 386.2/386.2 kB 6.1 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from langchain) (2.11.9)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from langchain) (1.4.39)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from langchain) (2.29.0)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from langchain) (6.0)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from langchain-core<1.0.0,>=0.3.72->langchain) (9.1.2)\n",
+      "Collecting jsonpatch<2.0,>=1.33 (from langchain-core<1.0.0,>=0.3.72->langchain)\n",
+      "  Downloading jsonpatch-1.33-py2.py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.7 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from langchain-core<1.0.0,>=0.3.72->langchain) (4.15.0)\n",
+      "Collecting packaging>=23.2 (from langchain-core<1.0.0,>=0.3.72->langchain)\n",
+      "  Downloading packaging-25.0-py3-none-any.whl (66 kB)\n",
+      "                                              0.0/66.5 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 66.5/66.5 kB ? eta 0:00:00\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from langsmith>=0.1.17->langchain) (0.28.1)\n",
+      "Requirement already satisfied: orjson>=3.9.14 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from langsmith>=0.1.17->langchain) (3.11.3)\n",
+      "Collecting requests-toolbelt>=1.0.0 (from langsmith>=0.1.17->langchain)\n",
+      "  Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl (54 kB)\n",
+      "                                              0.0/54.5 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 54.5/54.5 kB ? eta 0:00:00\n",
+      "Collecting zstandard>=0.23.0 (from langsmith>=0.1.17->langchain)\n",
+      "  Downloading zstandard-0.25.0-cp311-cp311-win_amd64.whl (506 kB)\n",
+      "                                              0.0/506.2 kB ? eta -:--:--\n",
+      "     ------------------------               327.7/506.2 kB 6.8 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 506.2/506.2 kB 6.4 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.4.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests<3,>=2->langchain) (2023.5.7)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain) (2.0.1)\n",
+      "Requirement already satisfied: anyio in c:\\programdata\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.17->langchain) (3.5.0)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.17->langchain) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in c:\\users\\mchennu\\appdata\\roaming\\python\\python311\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain) (0.16.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\programdata\\anaconda3\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.72->langchain) (2.1)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from anyio->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain) (1.2.0)\n",
+      "Installing collected packages: zstandard, packaging, jsonpatch, requests-toolbelt, langsmith, langchain-core, langchain-text-splitters, langchain\n",
+      "Successfully installed jsonpatch-1.33 langchain-0.3.27 langchain-core-0.3.76 langchain-text-splitters-0.3.11 langsmith-0.4.29 packaging-25.0 requests-toolbelt-1.0.0 zstandard-0.25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install langchain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5973266f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddaee6c3",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
